--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-shoppingWeb_monitoring" class="navigator-link ">
-                    <span>C:\Users\USER\eclipse-workspace\shopping_monitoring\runner.xml</span>
+                    <span>C:\Users\USER\eclipse-workspace\shopping_monitoring\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -161,18 +161,18 @@
         </div> <!-- panel shoppingWeb_monitoring -->
         <div panel-name="test-xml-shoppingWeb_monitoring" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\USER\eclipse-workspace\shopping_monitoring\runner.xml</span>
+            <span class="header-content">C:\Users\USER\eclipse-workspace\shopping_monitoring\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite thread-count=&quot;10&quot; parallel=&quot;tests&quot; name=&quot;shoppingWeb monitoring&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;10&quot; parallel=&quot;tests&quot; name=&quot;FinPCWeb Automatic Guide Test&quot;&gt;
+  &lt;test thread-count=&quot;10&quot; parallel=&quot;tests&quot; name=&quot;shopping monitoring&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.naver.shopping.Suite_01_smartstore_product&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- FinPCWeb Automatic Guide Test --&gt;
+  &lt;/test&gt; &lt;!-- shopping monitoring --&gt;
 &lt;/suite&gt; &lt;!-- shoppingWeb monitoring --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -184,7 +184,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">FinPCWeb Automatic Guide Test (1 class)</span>
+                <span class="test-name">shopping monitoring (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -214,20 +214,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 's01_네이버로그인')
 data.setCell(0, 2, 'com.naver.shopping.Suite_01_smartstore_product')
-data.setCell(0, 3, 4143);
+data.setCell(0, 3, 3942);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 's02_스스_상품상세_진입')
 data.setCell(1, 2, 'com.naver.shopping.Suite_01_smartstore_product')
-data.setCell(1, 3, 2185);
+data.setCell(1, 3, 2346);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 's03_스스_구매하기')
 data.setCell(2, 2, 'com.naver.shopping.Suite_01_smartstore_product')
-data.setCell(2, 3, 2088);
+data.setCell(2, 3, 2091);
 window.suiteTableData['shoppingWeb_monitoring']= { tableData: data, tableDiv: 'times-div-shoppingWeb_monitoring'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-shoppingWeb_monitoring">
               </div> <!-- times-div-shoppingWeb_monitoring -->
             </div> <!-- times-div -->
@@ -260,59 +260,59 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">setupClass(org.testng.TestRunner@3daa82be)</span>
-                <span class="method-start">491 ms</span>
+                <span class="method-start">484 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">500 ms</span>
+                <span class="method-start">492 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod(public void com.naver.shopping.Suite_01_smartstore_product.s01_네이버로그인() throws java.lang.Interrupted...)</span>
-                <span class="method-start">3765 ms</span>
+                <span class="method-start">3438 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">s01_네이버로그인</span>
-                <span class="method-start">3766 ms</span>
+                <span class="method-start">3439 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod(public void com.naver.shopping.Suite_01_smartstore_product.s01_네이버로그인() throws java.lang.Interrupted...)</span>
-                <span class="method-start">8294 ms</span>
+                <span class="method-start">7743 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod(public void com.naver.shopping.Suite_01_smartstore_product.s02_스스_상품상세_진입())</span>
-                <span class="method-start">8604 ms</span>
+                <span class="method-start">8117 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">s02_스스_상품상세_진입</span>
-                <span class="method-start">8604 ms</span>
+                <span class="method-start">8117 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod(public void com.naver.shopping.Suite_01_smartstore_product.s02_스스_상품상세_진입(), [TestResult name=s02_스스...)</span>
-                <span class="method-start">10827 ms</span>
+                <span class="method-start">10495 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">s03_스스_구매하기</span>
-                <span class="method-start">10883 ms</span>
+                <span class="method-start">10550 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod(public void com.naver.shopping.Suite_01_smartstore_product.s03_스스_구매하기())</span>
-                <span class="method-start">10883 ms</span>
+                <span class="method-start">10550 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod(public void com.naver.shopping.Suite_01_smartstore_product.s03_스스_구매하기(), [TestResult name=s03_스스_구매...)</span>
-                <span class="method-start">13278 ms</span>
+                <span class="method-start">12709 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">13329 ms</span>
+                <span class="method-start">12768 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">13554 ms</span>
+                <span class="method-start">13120 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite(org.testng.TestRunner@3daa82be)</span>
-                <span class="method-start">13655 ms</span>
+                <span class="method-start">13234 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
