--- a/test-output/old/shoppingWeb monitoring/toc.html
+++ b/test-output/old/shoppingWeb monitoring/toc.html
@@ -22,8 +22,8 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>FinPCWeb Automatic Guide Test (3/0/0)</td><td valign='top' align='right'>
-  <a href='FinPCWeb Automatic Guide Test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>shopping monitoring (3/0/0)</td><td valign='top' align='right'>
+  <a href='shopping monitoring.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
