--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">shoppingWeb monitoring</th></tr>
-<tr><td><a href="#t0">FinPCWeb Automatic Guide Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,159</td><td></td><td></td></tr>
+<tr><td><a href="#t0">shopping monitoring</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,734</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">shoppingWeb monitoring</th></tr></tbody><tbody id="t0"><tr><th colspan="4">FinPCWeb Automatic Guide Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.naver.shopping.Suite_01_smartstore_product</td><td><a href="#m0">s01_네이버로그인</a></td><td rowspan="1">1732469585919</td><td rowspan="1">4143</td></tr><tr class="passedeven"><td><a href="#m1">s02_스스_상품상세_진입</a></td><td rowspan="1">1732469590757</td><td rowspan="1">2185</td></tr><tr class="passedeven"><td><a href="#m2">s03_스스_구매하기</a></td><td rowspan="1">1732469593036</td><td rowspan="1">2088</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">shoppingWeb monitoring</th></tr></tbody><tbody id="t0"><tr><th colspan="4">shopping monitoring &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.naver.shopping.Suite_01_smartstore_product</td><td><a href="#m0">s01_네이버로그인</a></td><td rowspan="1">1732477131870</td><td rowspan="1">3942</td></tr><tr class="passedeven"><td><a href="#m1">s02_스스_상품상세_진입</a></td><td rowspan="1">1732477136548</td><td rowspan="1">2346</td></tr><tr class="passedeven"><td><a href="#m2">s03_스스_구매하기</a></td><td rowspan="1">1732477138981</td><td rowspan="1">2091</td></tr></tbody>
 </table>
-<h2>FinPCWeb Automatic Guide Test</h2><h3 id="m0">com.naver.shopping.Suite_01_smartstore_product#s01_네이버로그인</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>shopping monitoring</h2><h3 id="m0">com.naver.shopping.Suite_01_smartstore_product#s01_네이버로그인</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.naver.shopping.Suite_01_smartstore_product#s02_스스_상품상세_진입</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">com.naver.shopping.Suite_01_smartstore_product#s03_스스_구매하기</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
